# AA_Solution

./: .gitignore  README.md  devenv.nix
back/: Cargo.toml
back/src/: docs.rs  excel.rs  main.rs  models.rs  test.xlsx
back/src/routes/: excel.rs  mod.rs
front/: Cargo.toml  Trunk.toml  index.html
front/assets/css/: index.css
front/src/: lib.rs
front/src/components/: chart.rs  upload.rs
