[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
web-sys = "0.3" 
console_log = "0.2"
log = "0.4"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[profile.release]
opt-level = "z"



